# NextAgent

./: .env.example  ClaudeOpus.md  ClaudeOpus_Result.md  DeepSeekV32.md  EXTENSION_GUIDE.md  GLM47.md  GPT5_Result.md  Prompt.md  README.md  Seed18.md  TASK.md  pyproject.toml  requirements.txt
doc/: Baidu.md  Manus16.md  XiaoMI.md
examples/: __init__.py  example_code_generation.py  example_planning.py  example_tool_execution.py  planning_result.md
logs/: .gitkeep
output/: AI Agent 原理与开发实战.json  基于LLM的Multi-Agent系统原理与开发实战.json  基于LLM的Multi-Agent系统原理与开发实战2.json
src/: __init__.py  main.py  types.py
src/agents/: __init__.py  base.py  coder.py  coordinator.py  critic.py  executor.py  planner.py  researcher.py  synthesizer.py
src/config/: __init__.py  prompts.py  settings.py
src/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/llm/: __init__.py  factory.py
src/memory/: __init__.py  long_term.py  short_term.py
src/tools/: __init__.py  base.py  calculator.py  code_executor.py  file_manager.py  search.py
src/types/: types.py
src/utils/: __init__.py  logger.py  visualizer.py
tests/: __init__.py  conftest.py  test_flow.py  test_graph.py  test_tools.py
workspace/: .gitkeep
